--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,3 +80,19 @@ input[type="number"]::-webkit-outer-spin-button {
   appearance: none;
   margin: 0;
 }
+
+
+.button {
+  background-color: rgba(39, 37, 119, 0.658);
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.button:hover {
+  background-color:#4c49e0;
+  color: white;
+}
