--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,7 +43,7 @@
   align-items: center;
 }
 
-.component input {
+.component input, select {
   margin-left: 15px;
   border: 2px solid rgba(97, 8, 170, 0.5);
   border-radius: 4px;
