--- a/client/src/components/candidate/style.css
+++ b/client/src/components/candidate/style.css
@@ -4,129 +4,133 @@
   float: left;
   margin-right: 15px;
 } */
-.div1 {
+.divv {
+  margin-top: 100px;
+  display: flex;
+}
+/* .div1 {
   text-align: center;
   position: absolute;
-  display: grid;
-  /* bottom: 50%; */
-  top: 20%;
+  display: grid; */
+/* bottom: 50%; */
+/* top: 20%;
   left: 65%;
   width: 320px;
   padding: 10px;
   border: 5px solid rgb(165, 190, 22);
   margin: 0;
-}
+} */
 
-.div2 {
+/* .div2 {
   text-align: center;
   position: absolute;
-  display: grid;
-  /* bottom: 50%; */
-  top: 20%;
+  display: grid; */
+/* bottom: 50%; */
+/* top: 20%;
   left: 37.5%;
   width: 320px;
   padding: 10px;
   border: 5px solid rgb(150, 190, 22);
   margin: 0;
-}
-.div3 {
+} */
+/* .div3 {
   text-align: center;
   position: absolute;
-  display: grid;
-  /* bottom: 50%; */
-  top: 20%;
+  display: grid; */
+/* bottom: 50%; */
+/* top: 20%;
   left: 10%;
   width: 320px;
   padding: 10px;
   border: 5px solid rgb(165, 190, 22);
   margin: 0;
-}
-.div4 {
+} */
+/* .div4 {
   text-align: center;
   position: absolute;
-  display: grid;
-  /* bottom: 50%; */
-  top: 51%;
+  display: grid; */
+/* bottom: 50%; */
+/* top: 51%;
   left: 23%;
   width: 320px;
   padding: 10px;
   border: 5px solid rgb(165, 190, 22);
   margin: 0;
-}
+} */
 
-.div5 {
+/* .div5 {
   text-align: center;
   position: absolute;
-  display: grid;
-  /* bottom: 50%; */
-  top: 51%;
+  display: grid; */
+/* bottom: 50%; */
+/* top: 51%;
   left: 51%;
   width: 320px;
   padding: 10px;
   border: 5px solid rgb(165, 190, 22);
   margin: 0;
-}
-#buttom1 {
+} */
+/* #buttom1 {
   text-align: center;
   position: absolute;
-  display: grid;
-  /* bottom: 50%; */
-  top: 37%;
+  display: grid; */
+/* bottom: 50%; */
+/* top: 37%;
   left: 65%;
   width: 320px;
   padding: 10px;
   border: 5px solid rgb(165, 190, 22);
   margin: 0;
-}
+} */
 
-#buttom2 {
+/* #buttom2 {
   text-align: center;
   position: absolute;
-  display: grid;
-  /* bottom: 50%; */
-  top: 37%;
+  display: grid; */
+/* bottom: 50%; */
+/* top: 37%;
   left: 37.5%;
   width: 320px;
   padding: 10px;
   border: 5px solid rgb(165, 190, 22);
   margin: 0;
-}
+} */
 
-#buttom3 {
+/* #buttom3 {
   text-align: center;
   position: absolute;
-  display: grid;
-  /* bottom: 50%; */
-  top: 37%;
+  display: grid; */
+/* bottom: 50%; */
+/* top: 37%;
   left: 10%;
   width: 320px;
   padding: 10px;
   border: 5px solid rgb(165, 190, 22);
   margin: 0;
-}
+} */
 
-#buttom4 {
+/* #buttom4 {
   text-align: center;
   position: absolute;
-  display: grid;
-  /* bottom: 50%; */
-  top: 68%;
+  display: grid; */
+/* bottom: 50%; */
+/* top: 68%;
   left: 23%;
   width: 320px;
   padding: 10px;
   border: 5px solid rgb(165, 190, 22);
   margin: 0;
-}
+} */
 
-#buttom5 {
+/* #buttom5 {
   text-align: center;
-  position: absolute;
-  display: grid;
-  /* bottom: 50%; */
-  top: 68%;
+  position: absolute; */
+/* display: grid; */
+/* bottom: 50%; */
+/* top: 68%;
   left: 51%;
   width: 320px;
   padding: 10px;
   border: 5px solid rgb(165, 190, 22);
   margin: 0;
-}
+} */
