--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,7 +98,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 
 #specialHeader {
-  color: rgb(10, 125, 255);
+  color: rgba(10, 125, 255, 0.7);
   font-family: cursive;
   font-size: 35px;
 }
