--- a/client/src/components/candidate/style.css
+++ b/client/src/components/candidate/style.css
@@ -1,138 +1,8 @@
-/* body {
-  text-align: right;
-  clear: both;
-  float: left;
-  margin-right: 15px;
-} */
 .div {
-  margin: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 50px;
   display: flex;
   align-items: space-between;
   flex-direction: column;
 }
-/* .div1 {
-  text-align: center;
-  position: absolute;
-  display: grid; */
-/* bottom: 50%; */
-/* top: 20%;
-  left: 65%;
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(165, 190, 22);
-  margin: 0;
-} */
-
-/* .div2 {
-  text-align: center;
-  position: absolute;
-  display: grid; */
-/* bottom: 50%; */
-/* top: 20%;
-  left: 37.5%;
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(150, 190, 22);
-  margin: 0;
-} */
-/* .div3 {
-  text-align: center;
-  position: absolute;
-  display: grid; */
-/* bottom: 50%; */
-/* top: 20%;
-  left: 10%;
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(165, 190, 22);
-  margin: 0;
-} */
-/* .div4 {
-  text-align: center;
-  position: absolute;
-  display: grid; */
-/* bottom: 50%; */
-/* top: 51%;
-  left: 23%;
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(165, 190, 22);
-  margin: 0;
-} */
-
-/* .div5 {
-  text-align: center;
-  position: absolute;
-  display: grid; */
-/* bottom: 50%; */
-/* top: 51%;
-  left: 51%;
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(165, 190, 22);
-  margin: 0;
-} */
-/* #buttom1 {
-  text-align: center;
-  position: absolute;
-  display: grid; */
-/* bottom: 50%; */
-/* top: 37%;
-  left: 65%;
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(165, 190, 22);
-  margin: 0;
-} */
-
-/* #buttom2 {
-  text-align: center;
-  position: absolute;
-  display: grid; */
-/* bottom: 50%; */
-/* top: 37%;
-  left: 37.5%;
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(165, 190, 22);
-  margin: 0;
-} */
-
-/* #buttom3 {
-  text-align: center;
-  position: absolute;
-  display: grid; */
-/* bottom: 50%; */
-/* top: 37%;
-  left: 10%;
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(165, 190, 22);
-  margin: 0;
-} */
-
-/* #buttom4 {
-  text-align: center;
-  position: absolute;
-  display: grid; */
-/* bottom: 50%; */
-/* top: 68%;
-  left: 23%;
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(165, 190, 22);
-  margin: 0;
-} */
-
-/* #buttom5 {
-  text-align: center;
-  position: absolute; */
-/* display: grid; */
-/* bottom: 50%; */
-/* top: 68%;
-  left: 51%;
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(165, 190, 22);
-  margin: 0;
-} */
