--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -171,7 +171,7 @@ hr {
   text-transform: uppercase;
   color: #fff;
   background-color: #5ca9fb;
-  background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background-image: linear-gradient(to right, #4f7eb1 0%, #266eda 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
   margin: 0;
@@ -188,7 +188,7 @@ hr {
 .btn-custom.active {
   color: #fff;
   background-image: none;
-  background-color: #6372ff;
+  background-color: #2791bb;
 }
 .btn:active,
 .btn.active {
@@ -593,7 +593,12 @@ label {
 /* Footer Section*/
 #footer {
   background: #f6f6f6;
-  padding: 30px 0;
+  padding: 20px 0;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 #footer p {
   color: #888;
