--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -593,7 +593,7 @@ label {
 /* Footer Section*/
 #footer {
   background: #f6f6f6;
-  padding: 20px 0;
+  padding: 15px;
   position: fixed;
   left: 0;
   bottom: 0;
