--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -58,8 +58,6 @@ ol {
 ul,
 ol {
   padding: 0;
-  /* webkit-padding: 0;
-  moz-padding: 0; */
 }
 hr {
   height: 2px;
@@ -72,6 +70,7 @@ hr {
 }
 /* Navigation */
 #menu {
+  margin-bottom: 0px;
   padding: 15px;
   transition: all 0.8s;
 }
