--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,15 +48,16 @@ select {
   margin-left: 15px;
   border: 2px solid rgba(97, 8, 170, 0.5);
   border-radius: 4px;
-  font-size: large;
-  height: 60px;
-  width: 500px;
+  height: 48px;
+  width: 450px;
   color: black;
 }
 .component label {
   color: black;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 500;
+  margin-right: 556px;
+    margin-bottom: -33px
 }
 
 .component h1 {
@@ -68,12 +69,7 @@ select {
   font-size: 36px;
   color: #333;
 }
-.component #id {
-  margin-right: 450px;
-}
-.component #password {
-  margin-right: 385px;
-}
+
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
